mybatis -> boot 프로젝트 이름변경

--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password=hr
 #mybatis 
 mybatis.configuration.map-underscore-to-camel-case=true
 #mybatis.configuration.jdbc-type-for-null=VARCHAR
-#mybatis.type-aliases-package=com.example.demo
+#mybatis.type-aliases-package=com.example.www
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 #log
