--- a/jpa/src/main/resources/application-mysql.properties
+++ b/jpa/src/main/resources/application-mysql.properties
@@ -16,6 +16,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #datasource (mysql)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&allowPublicKeyRetrieval=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
