@Mapperscan -> @Mapper로 수정 springboot 버전 2.7.15 -> 2.7.18로 업그레이드

--- a/boot/src/main/resources/application.properties
+++ b/boot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=81
+server.port=82
 
 #datasource (oracle)
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
@@ -13,4 +13,4 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 #log
-logging.level.com.example.web=DEBUG
+logging.level.com.example.www=DEBUG
