--- a/jpa/src/main/resources/application-oracle.properties
+++ b/jpa/src/main/resources/application-oracle.properties
@@ -17,4 +17,4 @@ spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/xe
 spring.datasource.username=hr
-spring.datasource.password=1234
+spring.datasource.password=hr
