--- a/jpa/src/main/resources/application.properties
+++ b/jpa/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.profiles.active=mysql
-#spring.profiles.active=oracle
-#spring.profiles.active=h2
 server.port=8081
+
+#spring.profiles.active=mysql
+#spring.profiles.active=oracle
+spring.profiles.active=h2
