--- a/jpa/src/main/resources/application.properties
+++ b/jpa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
 
 #spring.profiles.active=mysql
-#spring.profiles.active=oracle
-spring.profiles.active=h2
+spring.profiles.active=oracle
+#spring.profiles.active=h2
