--- a/ex03controller/src/main/resources/application.properties
+++ b/ex03controller/src/main/resources/application.properties
@@ -3,4 +3,14 @@ server.servlet.context-path=/insa
 server.port=81
 management.endpoints.web.exposure.include=*
 
-logging.level.org.springframework=debug
+
+#LOG 관련 설정 
+logging.level.root=INFO
+logging.level.org.springframework=DEBUG
+logging.level.com.example.demo=DEBUG
+logging.pattern.console=[%d{HH:mm:ss}] %-5level %logger{36} - %msg%n
+
+#output to a temp_folder/file
+logging.file.name=c:/Temp/springboot.log
+# Logging pattern for file
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%
