--- a/ex03controller/src/main/resources/application.properties
+++ b/ex03controller/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=controller
 server.servlet.context-path=/insa
 server.port=81
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 
 
 #LOG 관련 설정 
