--- a/ex01demo/src/main/resources/application.properties
+++ b/ex01demo/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=demo
+#server
 server.port=81
+#server.servlet.context-path=web
 
 #Oracle DataSource
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
@@ -8,20 +10,21 @@ spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=hr
 spring.datasource.password=hr
-
+spring.datasource.hikari.maximum-pool-size=3
 
 #MyBatis
-mybatis.type-aliases-package=com.example.demo
 mybatis.configuration.map-underscore-to-camel-case=true
-logging.level.hello.itemservice.repository.mybatis=debug
+mybatis.configuration.jdbc-type-for-null=VARCHAR
+mybatis.type-aliases-package=com.example.demo
 mybatis.mapper-locations=classpath:mappers/*.xml
 
-
 #log
+logging.level.root=info
 logging.level.jdbc.resultsettable=debug
 logging.level.jdbc.sqlonly=debug
 logging.level.org.springframework.web=debug
 logging.level.com.example.demo=debug
-logging.level.root=info
+logging.pattern.console=[%d{HH:mm:ss}] %-5level %logger{36} - [%L]%msg%n
 
+#actuator
 management.endpoints.web.exposure.include="*"
