--- a/ex01demo/src/main/resources/application.properties
+++ b/ex01demo/src/main/resources/application.properties
@@ -27,4 +27,4 @@ logging.level.com.example.demo=debug
 logging.pattern.console=[%d{HH:mm:ss}] %-5level %logger{36} - [%L]%msg%n
 
 #actuator
-management.endpoints.web.exposure.include="*"
+management.endpoints.web.exposure.include=*
