--- a/ex03controller/src/main/resources/application.properties
+++ b/ex03controller/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=81
 
 #LOG 관련 설정 
 logging.level.root=INFO
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework.web=DEBUG
 logging.level.com.example.demo=DEBUG
 logging.pattern.console=[%d{HH:mm:ss}] %-5level %logger{36} - %msg%n
 
