--- a/ex06reply/src/main/resources/application.properties
+++ b/ex06reply/src/main/resources/application.properties
@@ -26,9 +26,9 @@ logging.level.jdbc.resultset=off
 logging.level.jdbc.connection=off
 logging.level.jdbc.audit=off
 
-logging.level.org.springframework=debug
+logging.level.org.springframework.web=debug
 logging.level.com.example.demo=debug
-logging.level.root=debug
+logging.level.root=info
 logging.level.javax.management=off
 logging.level.sun.rmi=off
 logging.level.org.thymeleaf=off
