--- a/ex09jpa/src/main/resources/application.properties
+++ b/ex09jpa/src/main/resources/application.properties
@@ -1,23 +1,5 @@
-spring.application.name=ex09jpa
+server.port=8081
 
-server.port=81
-
-#oracle
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-#spring.datasource.username=hr
-#spring.datasource.password=hr
-
-## jpa
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format-sql=true
-#＃spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
-
-#mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=hr
-spring.datasource.password=hr
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.profiles.active=mysql
+spring.profiles.active=oracle
+#spring.profiles.active=h2
