board security 추가

--- a/ex08boardSecurity/src/main/resources/application.properties
+++ b/ex08boardSecurity/src/main/resources/application.properties
@@ -28,7 +28,7 @@ logging.level.jdbc.audit=off
 
 logging.level.org.springframework=debug
 logging.level.com.example.demo=debug
-logging.level.root=debug
+logging.level.root=info
 logging.level.javax.management=off
 logging.level.sun.rmi=off
 logging.level.org.thymeleaf=off
