--- a/ex08boardSecurity/pom.xml
+++ b/ex08boardSecurity/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>board</artifactId>
+	<artifactId>ex08boardSecurity</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ex08boardSecurity</name>
 	<description>board + security Demo project for Spring Boot</description>
