--- a/boot/pom.xml
+++ b/boot/pom.xml
@@ -10,7 +10,7 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>web</artifactId>
+	<artifactId>boot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>boot</name>
 	<description>Demo project for Spring Boot</description>
