--- a/ex03controller/pom.xml
+++ b/ex03controller/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>contolller</artifactId>
+	<artifactId>ex03controller</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>controller</name>
 	<description>Demo project for Spring Boot</description>
