--- a/ex09jpa/pom.xml
+++ b/ex09jpa/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>contolller</artifactId>
+	<artifactId>ex09jpa</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ex09jpa</name>
 	<description>Demo project for Spring Boot</description>
