--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ bin/
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /.metadata/
+.settings/
+target/
+.classpath
+.project
+.factorypath
