--- a/ex03controller/src/main/resources/application.properties
+++ b/ex03controller/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=controller
-server.servlet.context-path=/insa
+#server.servlet.context-path=/insa
 server.port=81
 #management.endpoints.web.exposure.include=*
 
 
-#LOG 관련 설정 
+#LOG \uad00\ub828 \uc124\uc815 
 logging.level.root=INFO
 #logging.level.org.springframework.web=DEBUG
 logging.level.com.example.demo=DEBUG
