--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.jpa.database=oracle
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
 #logging.level.org.hibernate=info
 
+#LOG \uad00\ub828 \uc124\uc815 
 #log   trace > debug > info > warn > error >  fetal
 logging.level.com.example.demo=DEBUG
 logging.level.jdbc.connection=off
@@ -33,3 +34,14 @@ logging.level.jdbc.resultset=off
 logging.level.org.thymeleaf.TemplateEngine=warn
 logging.level.org.apache.coyote.http11.Http11InputBuffer=warn
 logging.level.root=info
+
+#logging.level.org.springframework.web=DEBUG
+logging.level.com.example.demo=DEBUG
+logging.pattern.console=[%d{HH:mm:ss}] %-5level %logger{36} - %msg%n
+
+#output to a temp_folder/file
+logging.file.name=c:/Temp/springboot.log
+# Logging pattern for file
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%
+
+
