--- a/ex01Mybatis/pom.xml
+++ b/ex01Mybatis/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>ex01demo</artifactId>
+	<artifactId>ex01Mybatis</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ex01demo</name>
+	<name>ex01Mybatis</name>
 	<description>Demo project for Spring Boot</description>
 	<url />
 	<licenses>
