--- a/ex09jpa/src/main/resources/application-oracle.properties
+++ b/ex09jpa/src/main/resources/application-oracle.properties
@@ -11,7 +11,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #jpa database
 spring.jpa.database=oracle
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 #datasource (oracle)
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
