--- a/ex08security/src/main/resources/application.properties
+++ b/ex08security/src/main/resources/application.properties
@@ -14,9 +14,12 @@ spring.datasource.hikari.maximum-pool-size=3
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.jdbc-type-for-null=VARCHAR
 mybatis.type-aliases-package=com.example.demo
-mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 logging.level.root=info
 logging.level.com.example.demo=debug
 logging.level.org.springframework.web=debug
 logging.level.org.springframework.security=debug
+
+#\ub370\uc774\ud130\ubca0\uc774\uc2a4\uc5d0 \uc138\uc158\uc744 \uc800\uc7a5(\uc11c\ubc84 \uc7ac\uc2dc\uc791\ud574\ub3c4 \uc138\uc158 \uc720\uc9c0)
+#spring.session.jdbc.initialize-schema=always
