--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:log4jdbc:oracle:thin:@127.0.0.1:1521/xe
 spring.datasource.username=hr
 spring.datasource.password=hr
 spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.connection-timeout=5000
 
 
 #mybatis
