--- a/ex09jpa/src/main/resources/application-oracle.properties
+++ b/ex09jpa/src/main/resources/application-oracle.properties
@@ -1,13 +1,16 @@
+server.port=81
+
 #jpa
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 
 #jpa log
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.hight_sql=true
 #logging.level.org.hibernate.type.descriptor.sql=trace
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 #jpa database
 spring.jpa.database=oracle
@@ -18,3 +21,6 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521/xe
 spring.datasource.username=hr
 spring.datasource.password=hr
+
+#logging
+logging.level.org.hibernate=info
