--- a/ex03controller/src/main/resources/application.properties
+++ b/ex03controller/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=81
 #management.endpoints.web.exposure.include=*
 
 
-#LOG \uad00\ub828 \uc124\uc815 
+#LOG
 logging.level.root=INFO
 #logging.level.org.springframework.web=DEBUG
 logging.level.com.example.demo=DEBUG
@@ -15,3 +15,5 @@ logging.file.name=c:/Temp/springboot.log
 # Logging pattern for file
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%
 
+
+#springdoc.api-docs.path=/api-docs
