--- a/ex11Aop/src/main/resources/application.properties
+++ b/ex11Aop/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ex11Aop
+
+
+# error
+#exception 포함여부
+server.error.include-exception=true
+# message 포함 여부
+server.error.include-message=always
+# trace 포함 여부(never/always/on_param)
+server.error.include-stacktrace=on_param
+# errors 포함여부
+server.error.include-binding-errors=on_param
