--- a/ex03controller/src/main/resources/application.properties
+++ b/ex03controller/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=controller
 #server.servlet.context-path=/insa
 server.port=81
-#management.endpoints.web.exposure.include=*
 
+
+#actuator
+management.endpoints.web.exposure.include=*
 
 #LOG
 logging.level.root=INFO
