--- a/ex01Mybatis/src/main/resources/application.properties
+++ b/ex01Mybatis/src/main/resources/application.properties
@@ -1,39 +1,27 @@
 spring.application.name=mybatis
 #server
 server.port=81
-#server.servlet.context-path=web
 
 #Oracle DataSource
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521/xe
-#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-#spring.datasource.url=jdbc:log4jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username=hr
 spring.datasource.password=hr
 spring.datasource.hikari.maximum-pool-size=3
+
 
 #MyBatis
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.configuration.jdbc-type-for-null=VARCHAR
 mybatis.type-aliases-package=com.example.demo
-mybatis.mapper-locations=classpath:mappers/*.xml
+mybatis.mapper-locations=classpath:mappers/**/*.xml
+
 
 #log
 logging.level.root=info
-#logging.level.org.springframework.web=debug
-
-#mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
-logging.level.com.example.demo=debug
-#mybatis.configuration.log-impl=org.apache.ibatis.logging.slf4j.Slf4jImpl
-logging.level.org.mybatis=DEBUG
-#logging.level.java.sql=DEBUG
-
-#log4jdbc
-#logging.level.jdbc.resultsettable=debug
-#logging.level.jdbc.sqlonly=debug
+logging.level.org.springframework.web=debug
+logging.level.com.example.demo=trace
 
 logging.pattern.console=[%d{HH:mm:ss}] %-5level %logger{36} - [%L]%msg%n
 
-#actuator
-management.endpoints.web.exposure.include=*
+
